<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7bab9d"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/menu"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:src="@drawable/menu"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/voice_state"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textColor="@color/textcolor"
        android:textSize="12sp"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/voice_btn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/home_main_img"
        android:layout_margin="40dp" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/home_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_status_off"
        android:textColor="@color/textcolor"
        android:textSize="14sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/home_status_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/home_button_off"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"/>

</LinearLayout>